# Test-task-1547

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt  Input.txt  main.cpp  text.txt
Main/: CMakeLists.txt  main.cpp
Objects/: CMakeLists.txt
Objects/include/: Frame.hpp  HLine.hpp  Line.hpp  Object.hpp  Point.hpp  Rect.hpp  Triangle.hpp  VLine.hpp
Objects/src/: HLine.cpp  Line.cpp  Object.cpp  Point.cpp  Rect.cpp  Triangle.cpp  VLine.cpp
SceneCreator/: CMakeLists.txt
SceneCreator/include/: Bitmap.hpp  SceneCreator.hpp
SceneCreator/src/: Bitmap.cpp  SceneCreator.cpp
